[gd_scene load_steps=2 format=3 uid="uid://dt8qo1eojwjqs"]

[ext_resource type="Script" uid="uid://m82ijxeng0e2" path="res://scripts/choose_level.gd" id="1_klnia"]

[node name="ChooseLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klnia")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -174.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Elija su experiencia"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Occlussion culling" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Occlussion culling"

[node name="PlayOC" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Jugar"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HLOD" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "HLOD"

[node name="PlayHLOD" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Jugar"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Object pooling" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Object pooling"

[node name="PlayOP" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Jugar"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Chunk" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Renderizado por chunks"

[node name="PlayChunk" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Jugar"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volver"

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/Occlussion culling" to="." method="_on_occlussion_culling_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayOC" to="." method="_on_play_oc_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer2/HLOD" to="." method="_on_hlod_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/PlayHLOD" to="." method="_on_play_hlod_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer3/Object pooling" to="." method="_on_object_pooling_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/PlayOP" to="." method="_on_play_op_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer4/Chunk" to="." method="_on_chunk_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/PlayChunk" to="." method="_on_play_chunk_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
